[bug] fixed white space on top of the body

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ h1 {
 
 section {
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
 }
 
 section.container {
